--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,26 +1,32 @@
-name: Android CI
+name: Build APK
 
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
-  build:
-
+  build-apk:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: set up JDK 11
-      uses: actions/setup-java@v4
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
+      - name: Checkout código
+        uses: actions/checkout@v3
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+      - name: Instalar dependências
+        uses: android-actions/setup-android@v2
+
+      - name: Instalar NDK
+        run: sdkmanager "ndk;25.2.9519653"
+
+      - name: Compilar APK
+        run: |
+          cd android
+          chmod +x ./gradlew
+          ./gradlew assembleDebug
+
+      - name: Enviar APK para artefato
+        uses: actions/upload-artifact@v4
+        with:
+          name: JogoAventura-APK
+          path: android/app/build/outputs/apk/debug/app-debug.apk
